--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer>
+  <div class="container">
+    <p>&copy; 2023 Your Website. All rights reserved.</p>
+  </div>
+</footer>
