--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg bg-body-tertiary navbar-custom">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="home">Movie-App</a>
+    <div class="d-flex" role="search">
+      <a routerLink="wishlist"
+        ><i class="fa-solid fa-heart" style="color: #000000"></i
+        ><span class="ms-2">Wishlist</span></a
+      >
+    </div>
+  </div>
+</nav>
