--- a/src/app/movies/all-movies/all-movies.component.html
+++ b/src/app/movies/all-movies/all-movies.component.html
@@ -1,3 +1,10 @@
-<p>all-movies works!</p>
-
-
+<div class="container">
+  <div class="row">
+    <div
+      class="col-sm-6 col-md-3 col-lg-2 gy-3"
+      *ngFor="let movie of allMovies"
+    >
+      <app-movie-card [movie]="movie"> </app-movie-card>
+    </div>
+  </div>
+</div>
