--- a/src/app/shared/not-found/not-found.component.html
+++ b/src/app/shared/not-found/not-found.component.html
@@ -1,1 +1,7 @@
-<p>not-found works!</p>
+<div class="container">
+  <h1>404</h1>
+  <h2>Page Not Found</h2>
+  <p>Oops! The page you are looking for could not be found.</p>
+  <a routerLink="/products">Go back to the homepage</a>
+  <i class="fa-solid fa-heart-crack icon fa-10x" style="color: #00000020"></i>
+</div>
