fixing an error in notfound page

--- a/src/app/shared/not-found/not-found.component.html
+++ b/src/app/shared/not-found/not-found.component.html
@@ -2,6 +2,6 @@
   <h1>404</h1>
   <h2>Page Not Found</h2>
   <p>Oops! The page you are looking for could not be found.</p>
-  <a routerLink="/products">Go back to the homepage</a>
+  <a routerLink="/home">Go back to the homepage</a>
   <i class="fa-solid fa-heart-crack icon fa-10x" style="color: #00000020"></i>
 </div>
