--- a/src/app/movies/movie-card/movie-card.component.html
+++ b/src/app/movies/movie-card/movie-card.component.html
@@ -26,7 +26,14 @@
     </div>
   </div>
   <img
+    *ngIf="movie.poster_path"
     [src]="imgPrefex + movie.poster_path"
+    [alt]="movie.original_title"
+    (click)="routingToDetails(movie.id)"
+  />
+  <img
+    *ngIf="!movie.poster_path"
+    src="../../../assets/images/image Place holder.png"
     [alt]="movie.original_title"
     (click)="routingToDetails(movie.id)"
   />
@@ -54,9 +61,9 @@
       [radius]="10"
       [outerStrokeWidth]="2"
       [innerStrokeWidth]="0"
-      [outerStrokeColor]="'yellow'"
+      [outerStrokeColor]="'red'"
     ></circle-progress>
-    <div class="d-flex justify-content-between align-items-center">
+    <div class="d-flex justify-content-between align-items-end">
       <div class="right-content">
         <h2 class="title">
           <a (click)="routingToDetails(movie.id)">{{ movie.original_title }}</a>
