--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,11 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-custom">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="home">Movie-App</a>
+    <div>
+      <a class="navbar-brand" routerLink="home">Movie-App</a>
+      <a routerLink="search"
+        ><i class="fa-solid fa-search" style="color: #000000"></i
+      ></a>
+    </div>
     <div class="d-flex" role="search">
       <a routerLink="wishlist"
         ><i class="fa-solid fa-heart" style="color: #000000"></i
