--- a/src/app/movies/all-movies/all-movies.component.html
+++ b/src/app/movies/all-movies/all-movies.component.html
@@ -6,5 +6,29 @@
     >
       <app-movie-card [movie]="movie"> </app-movie-card>
     </div>
+    <div class="pagination d-flex justify-content-center mb-4">
+      <button
+        class="btn btn-outline-warning text-black me-2"
+        (click)="previousPage()"
+        [disabled]="pageNumber === 1"
+      >
+        Previous
+      </button>
+      <button
+        class="btn btn-outline-warning text-black me-2"
+        *ngFor="let page of pages"
+        (click)="show(page)"
+        [class.active]="page === pageNumber"
+      >
+        {{ page }}
+      </button>
+      <button
+        class="btn btn-outline-warning text-black"
+        (click)="nextPage()"
+        [disabled]="pageNumber === pages.length"
+      >
+        Next
+      </button>
+    </div>
   </div>
 </div>
