--- a/src/app/shared/search/search.component.html
+++ b/src/app/shared/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row py-3 d-flex justify-content-center">
     <div class="p-3">
       <input
@@ -52,4 +52,4 @@
       Next
     </button>
   </div>
-</div>
+</div> -->
