--- a/src/app/movies/all-movies/all-movies.component.html
+++ b/src/app/movies/all-movies/all-movies.component.html
@@ -1,5 +1,17 @@
 <div class="container">
   <div class="row">
+    <div class="d-flex mt-3">
+      <input
+        type="text"
+        class="form-control me-2"
+        placeholder="search by name .. "
+        [(ngModel)]="searchKey"
+      />
+      <button class="btn btn-outline-warning" type="submit" (click)="search()">
+        Search
+      </button>
+    </div>
+
     <div
       class="col-sm-6 col-md-3 col-lg-2 gy-3"
       *ngFor="let movie of allMovies"
