Post movie to wishlist Api and get it

--- a/src/app/movies/movie-card/movie-card.component.html
+++ b/src/app/movies/movie-card/movie-card.component.html
@@ -73,7 +73,7 @@
       <div class="left-content">
         <i
           class="fa fa-heart"
-          (click)="addToWatchList(movie)"
+          (click)="addToWatchList(movie.id)"
           [ngStyle]="{
             color: inWatchlist ? '#f5c518' : '#000000'
           }"
