--- a/src/app/movies/all-movies/all-movies.component.html
+++ b/src/app/movies/all-movies/all-movies.component.html
@@ -1,10 +1,46 @@
 <div class="container">
   <div class="row">
+    <div class="d-flex mt-3">
+      <input
+        type="text"
+        class="form-control me-2"
+        placeholder="search by name .. "
+        [(ngModel)]="searchKey"
+      />
+      <button class="btn btn-outline-warning" type="submit" (click)="search()">
+        Search
+      </button>
+    </div>
+
     <div
       class="col-sm-6 col-md-3 col-lg-2 gy-3"
       *ngFor="let movie of allMovies"
     >
       <app-movie-card [movie]="movie"> </app-movie-card>
+    </div>
+    <div class="pagination d-flex justify-content-center mb-4">
+      <button
+        class="btn btn-outline-warning text-black me-2"
+        (click)="previousPage()"
+        [disabled]="pageNumber === 1"
+      >
+        Previous
+      </button>
+      <button
+        class="btn btn-outline-warning text-black me-2"
+        *ngFor="let page of pages"
+        (click)="show(page)"
+        [class.active]="page === pageNumber"
+      >
+        {{ page }}
+      </button>
+      <button
+        class="btn btn-outline-warning text-black"
+        (click)="nextPage()"
+        [disabled]="pageNumber === pages.length"
+      >
+        Next
+      </button>
     </div>
   </div>
 </div>
