--- a/src/app/movies/details-child-show/details-child-show.component.html
+++ b/src/app/movies/details-child-show/details-child-show.component.html
@@ -29,7 +29,7 @@
           <div class="inWatchlist">
             <i
               class="fa fa-heart fa-2x"
-              (click)="addToWatchList(movie)"
+              (click)="addToWatchList(movie.id)"
               [ngStyle]="{
                 color: inWatchlist ? '#f5c518' : '#000000'
               }"
