--- a/src/app/wishlist/wishlist-card/wishlist-card.component.html
+++ b/src/app/wishlist/wishlist-card/wishlist-card.component.html
@@ -1,1 +1,29 @@
-<p>wishlist-card works!</p>
+<div class="card mb-3" style="max-width: 540px">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img
+        *ngIf="wishlist.poster_path"
+        [src]="imgPrefex + wishlist.poster_path"
+        [alt]="wishlist.title"
+        class="img-fluid"
+      />
+      <img
+        *ngIf="!wishlist.poster_path"
+        src="../../../assets/images/image Place holder.png"
+        [alt]="wishlist.title"
+        class="img-fluid h-100" 
+      />
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">{{ wishlist.original_title }}</h5>
+        <p class="card-text">
+          {{ wishlist.overview }}
+        </p>
+        <p class="card-text">
+          <small class="text-body-secondary">Last updated 3 mins ago</small>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
