--- a/src/app/wishlist/wishlist-card/wishlist-card.component.html
+++ b/src/app/wishlist/wishlist-card/wishlist-card.component.html
@@ -1,27 +1,76 @@
-<div class="card mb-3" style="max-width: 540px">
+<div class="card mb-3" >
   <div class="row g-0">
-    <div class="col-md-4">
+    <div class="col-md-5">
       <img
         *ngIf="wishlist.poster_path"
         [src]="imgPrefex + wishlist.poster_path"
         [alt]="wishlist.title"
-        class="img-fluid"
+        class="img-fluid w-75 poster rounded-4"
+        (click)="routingToDetails(wishlist.id)"
       />
       <img
         *ngIf="!wishlist.poster_path"
         src="../../../assets/images/image Place holder.png"
         [alt]="wishlist.title"
         class="img-fluid h-100" 
+        
       />
     </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">{{ wishlist.original_title }}</h5>
+    <div class="col-md-7">
+      <div class="card-body container-fluid">
+        <div class="d-flex position-relative">
+          <div class="me-5">
+             <a (click)="routingToDetails(wishlist.id)"><h6>{{ wishlist.original_title }}</h6></a>
+            <p class="card-text">
+          <small class="text-body-secondary">{{ wishlist.release_date | date }}</small>
+        </p>
+          </div>
+
+          <div class="inWatchlist position-absolute end-0"  routerlink="wishlist">
+            <i
+            class="fa fa-heart fa-2x"
+            
+            (click)="addToWatchList(wishlist.id)"
+            [ngStyle]="{
+              color: inWatchlist ? '#f5c518' : '#000000'
+            }"
+            ></i>
+          </div>
+        </div>
+         <div class="rating d-flex my-3">
+          <div class="stars me-3">
+            <i
+              class="fa-regular fa-star"
+              style="color: #000000"
+              [ngClass]="{ 'fa-solid': wishlist.vote_average > 1 }"
+            ></i>
+            <i
+              class="fa-regular fa-star"
+              style="color: #000000"
+              [ngClass]="{ 'fa-solid': wishlist.vote_average > 3 }"
+            ></i>
+            <i
+              class="fa-regular fa-star"
+              style="color: #000000"
+              [ngClass]="{ 'fa-solid': wishlist.vote_average > 5 }"
+            ></i>
+            <i
+              class="fa-regular fa-star"
+              style="color: #000000"
+              [ngClass]="{ 'fa-solid': wishlist.vote_average > 7 }"
+            ></i>
+            <i
+              class="fa-regular fa-star"
+              style="color: #000000"
+              [ngClass]="{ 'fa-solid': wishlist.vote_average > 9 }"
+            ></i>
+          </div>
+          <div class="voters">
+            {{ wishlist.vote_count }}
+          </div>
+        </div>
         <p class="card-text">
           {{ wishlist.overview }}
-        </p>
-        <p class="card-text">
-          <small class="text-body-secondary">Last updated 3 mins ago</small>
         </p>
       </div>
     </div>
