-fixing total height of page, -adding movie website in details, -adding interface to remaining components

--- a/src/app/shared/search/search.component.html
+++ b/src/app/shared/search/search.component.html
@@ -10,7 +10,7 @@
     </div>
     <div
       *ngFor="let movie of trandingMovies | searchMovie : term"
-      class="col-md-2"
+      class="col-md-2 mt-3"
     >
       <app-movie-card [movie]="movie"> </app-movie-card>
     </div>
