--- a/src/app/movies/all-movies/all-movies.component.html
+++ b/src/app/movies/all-movies/all-movies.component.html
@@ -18,7 +18,7 @@
     >
       <app-movie-card [movie]="movie"> </app-movie-card>
     </div>
-    <div class="pagination d-flex justify-content-center mb-4">
+    <div class="pagination d-flex justify-content-center my-4">
       <button
         class="btn btn-outline-warning text-black me-2"
         (click)="previousPage()"
