--- a/src/app/movies/details-child-show/details-child-show.component.html
+++ b/src/app/movies/details-child-show/details-child-show.component.html
@@ -108,6 +108,13 @@
             </ng-template>
           </div>
         </div>
+        <div>
+          <a [href]="movie.homepage" target="_blank">
+            <span class="badge rounded-pill text-bg-secondary p-2"
+              >Website<i class="fa-solid fa-link ms-2" style="color: #fff"></i
+            ></span>
+          </a>
+        </div>
       </div>
     </div>
   </div>
