--- a/src/app/movies/details-child-show/details-child-show.component.css
+++ b/src/app/movies/details-child-show/details-child-show.component.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 .poster {
   max-width: 300px;
   border-radius: 30px;
@@ -19,4 +22,16 @@
 
 .company-logo {
   width: 50%;
+}
+
+.background {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  padding: 20px 0px;
+  filter: blur(15px);
+}
+
+.details-contianer {
+  padding: 40px;
 }
