--- a/src/app/movies/details-child-show/details-child-show.component.css
+++ b/src/app/movies/details-child-show/details-child-show.component.css
@@ -28,7 +28,8 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  padding: 20px 0px;
+  padding: 0 !important;
+
   filter: blur(15px);
 }
 
