--- a/src/app/movies/details-child-show/details-child-show.component.html
+++ b/src/app/movies/details-child-show/details-child-show.component.html
@@ -3,7 +3,7 @@
   <span class="visually-hidden">Loading...</span>
 </div>
 
-<div>
+<div class="container-fluid">
   <div *ngIf="movie">
     <div class="row details-contianer" style="position: relative">
       <div
@@ -14,9 +14,9 @@
           opacity: 0.3,
           'background-origin': 'border-box'
         }"
-        style="position: absolute; top: 0; bottom: 0; left: 0; right: 0"
+        style="position: absolute; top: 0; bottom: 0; right: 0"
       ></div>
-      <div class="col-sm-12 col-md-6 col-lg-4">
+      <div class="col-sm-12 col-md-6 col-lg-4 z-3">
         <div class="img">
           <img
             *ngIf="movie.poster_path"
@@ -32,7 +32,7 @@
           />
         </div>
       </div>
-      <div class="col-sm-12 col-md-6 col-lg-8">
+      <div class="col-sm-12 col-md-6 col-lg-8 z-3">
         <div class="details px-3">
           <div class="d-flex justify-content-between align-items-center">
             <div class="title">
@@ -132,12 +132,12 @@
     </div>
     <hr />
     <div
-      class="d-flex justify-content-center"
+      class="d-flex justify-content-center z-3"
       *ngIf="recommendedMovies.length == 0"
     >
       <h2>No Recommendations</h2>
     </div>
-    <div class="container" *ngIf="recommendedMovies.length > 0">
+    <div class="container z-3" *ngIf="recommendedMovies.length > 0">
       <h2>Recommendations</h2>
       <div class="row">
         <div
