--- a/src/app/movies/details-child-show/details-child-show.component.html
+++ b/src/app/movies/details-child-show/details-child-show.component.html
@@ -8,6 +8,7 @@
     <div class="row details-contianer" style="position: relative">
       <div
         class="background"
+        *ngIf="movie.backdrop_path"
         [ngStyle]="{
           'background-image': 'url(' + imgPrefex + movie.backdrop_path + ')',
           filter: 'blur(10px)',
