--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,20 +1,20 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-custom">
   <div class="container-fluid">
     
-      <a class="navbar-brand" routerLink="home">Movie Night</a>
+      <a class="navbar-brand "   routerLink="home"><img style="height: 50px;" src="../../../assets/images/Blue White Modern Simple Film Production Logo-PhotoRoom.png-PhotoRoom.png" alt=""></a>
      
     <div class="d-flex" role="search">
-       <a routerLink="search" class="me-2"
+       <a routerLink="search"routerLinkActive="active-link" class="me-2"
         ><i class="fa-solid fa-search" style="color: #000000"></i
       ></a>
-      <a routerLink="wishlist" class="position-relative"
-        ><i class="fa-solid fa-heart " style="color: #000000">
+      <a routerLink="wishlist" routerLinkActive="active-link" class="position-relative"
+        ><i class="fa-solid fa-heart " >
             <span class="wishicon translate-middle badge rounded-pill bg-dark text-warning">
       {{counter}}
     
   </span>
           </i
-        ><span class="ms-2">Wishlist</span></a
+        ><span class="ms-2" >Wishlist</span></a
       >
     </div>
   </div>
