--- a/src/app/movies/all-movies/all-movies.component.html
+++ b/src/app/movies/all-movies/all-movies.component.html
@@ -16,7 +16,7 @@
       class="col-sm-6 col-md-3 col-lg-2 gy-3"
       *ngFor="let movie of allMovies"
     >
-      <app-movie-card [movie]="movie"> </app-movie-card>
+      <app-movie-card [movie]="movie" [myWish]="myWishList"> </app-movie-card>
     </div>
     <div class="pagination d-flex justify-content-center mb-4 mt-5">
       <button
